    * removed method IndexItemsTable.end_get_for_specific_os
    * IndexItemsTable.resolve_item_inheritance error message instead of crash - if iid to inherit does not exist
    * new method IndexItemsTable.get_missing_iids_from_details for checking validity of 'inherit' and 'depends' fields in iids
    * InstlAdmin.verify_index_to_repo changed to use IndexItemsTable.get_missing_iids_from_details

24/9/2017 1.6.2.0

    programmer visible changes:
    * removed usage of install_definitions_index from instlInstanceBase_interactive.py
    * removed file installItem.py and all it's usage - finally only db operations are done
    * removed usage of InstallItem.push_var_stack_scope & InstlAdmin.sources_from_iids from all admin commands, effect mainly InstlAdmin.verify_index_to_repo
    * new method IndexItemsTable.change_status_of_all_iids to globally set all item status
    * removed unused file InstallItemLists.py
    * removed unused file test_InstallItems.py
    * InstlAdmin.do_depend replaced self.install_definitions_index with self.items_table.get_all_iids()
    * removed some redundant imports and functions
    * IndexItemTable.get_all_iids will return iids sorted
    * new method: IndexItemTable.iid_to_yaml intended to replace replace InstallItem.repr_for_yaml (not done yet)
    * removed "if self.items_table" from a few places as self.items_table is always initialized now
    * InstlInstanceBase.needs implemented with items_table instead of install_definitions_index
    * CMDObj.emptyline override to avoid a bug in PyCharm
    * new method: ConfigVarStack.repr_var_for_yaml represents 1 config var for yaml
    * ConfigVarStack.repr_for_yaml refactored to use ConfigVarStack.repr_var_for_yaml
    * Fixed IndexItemsTable.get_original_details
    * Fixed IndexItemsTable.repr_item_for_yaml and removed IndexItemsTable.iid_to_yaml which didi the same thing
    * InstlClient.repr_for_yaml rewritten with IndexItemsTable.repr_item_for_yaml