@@ -9,17 +9,6 @@ import aYaml
 from .instlInstanceBase import InstlInstanceBase
 from configVar import var_stack
 from svnTree import SVNTable
-from .indexItemTable import IndexItemsTable
-
-NameAndVersion = namedtuple('name_ver', ['name', 'version', 'name_and_version'])
-def NameAndVersionFromQueryResults(q_results_tuple):
-    name = q_results_tuple[1] or q_results_tuple[0]
-    n_and_v = q_results_tuple[1]
-    if q_results_tuple[2]:
-        n_and_v += " v" + q_results_tuple[2]
-
-    retVal = NameAndVersion(name=name, version=q_results_tuple[2], name_and_version=n_and_v)
-    return retVal
 
 
 class InstlClient(InstlInstanceBase):
@@ -264,9 +253,7 @@ class InstlClient(InstlInstanceBase):
         self.calc_iid_to_name_and_version()
 
     def calc_iid_to_name_and_version(self):
-        iids_and_names_from_db = self.items_table.name_and_version_report_for_active_iids()
-        for from_db in iids_and_names_from_db:
-            self.iid_to_name_and_version[from_db[0]] = NameAndVersionFromQueryResults(from_db)
+        self.items_table.set_name_and_version_for_active_iids()
 
     def resolve_special_build_in_iids(self, iids):
         iids_set = set(iids)
@@ -303,9 +290,10 @@ class InstlClient(InstlInstanceBase):
         iid_and_action = self.items_table.get_iids_and_details_for_active_iids(action_type, unique_values=True, limit_to_iids=limit_to_iids)
         iid_and_action.sort(key=lambda tup: tup[0])
         for IID, an_action in iid_and_action:
+            name_and_version = self.items_table.get_resolved_details_value_for_active_iid(iid=IID, detail_name="name_and_version")[0]
             self.batch_accum += an_action
             action_description = self.action_type_to_progress_message[action_type]
-            self.batch_accum += self.platform_helper.progress("{0} {1}".format(self.iid_to_name_and_version[IID].name, action_description))
+            self.batch_accum += self.platform_helper.progress("{0} {1}".format(name_and_version, action_description))
             retVal += 1
         return retVal
 
